# pydanja

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  all  docs-build  lint  mkdocs.yml  pyproject.toml  test  typecheck
.github/workflows/: build-docs.yml  python-app.yml
docs/: conf.py  index.rst
docs/mkdocs/: api-reference.md  contributing.md  fastapi.md  getting-started.md  index.md
src/examples/: basic.py  fastapi.py  relationship.py
src/pydanja/: __init__.py  __init__.pyi  openapi.py
tests/: test_model.py  test_resource_creation.py
tests/fixtures/: multiple_resource_with_id.json  multiple_resource_without_id.json  single_resource_with_id.json  single_resource_with_includes.json  single_resource_without_id.json
