[project]
name = "pydanja"
version = "0.1.2"
description = "JSON:API Support for Pydantic"
authors = [
    {name = "Chris Read",email = "centurix@gmail.com"},
]
dependencies = [
    "pydantic>=2.1.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["pydantic", "jsonapi", "json:api", "openapi", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
homepage = "https://github.com/Centurix/pydanja"
repository = "https://github.com/Centurix/pydanja"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
