[project]
name = "pydanja"
version = "0.1.13"
description = "JSON:API Support for Pydantic"
authors = [
    {name = "Chris Read",email = "centurix@gmail.com"},
]
dependencies = [
    "pydantic>=2.1.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["pydantic", "jsonapi", "json:api", "openapi", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
homepage = "https://github.com/Centurix/pydanja"
repository = "https://github.com/Centurix/pydanja"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
]

[tool.pdm.scripts]
lint = {cmd = "ruff .", help = "Linting using Ruff"}
test = {cmd = "pytest .", help = "Unit testing using pytest"}
typecheck = {cmd = "mypy .", help = "Type checking using mypy"}

[tool.mypy]
plugins = "pydantic.mypy"
exclude = "examples"

[tool.ruff]
line-length = 119
